# qt-kiosk-browser

./: CMakeLists.txt  LICENSE  README.md  main.cpp
